[package]
name = "bebop-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bebop = { version = "2.4.6" }

[build-dependencies]
bebop-tools = { version = "2.4.6" }

[features]
default = ["bebop-owned-all"]
bebop-owned-all = []